[package]
name = "stubborn-io"
version = "0.2.0"
authors = ["David Raifaizen <d-raif@outlook.com>", "David Webb <ravenger@dpwlabs.com>"]
edition = "2018"
description = "io traits/structs that automatically recover from potential disconnections/interruptions."
license = "MIT"
keywords = ["reconnect", "retry", "stubborn", "io", "StubbornTcpStream"]
repository = "https://github.com/craftytrickster/stubborn-io"
documentation = "https://docs.rs/stubborn-io"
readme = "README.md"

[dependencies]
tokio = { version = "0.2", features = ["time", "tcp", "io-util", "dns"] }
tokio-rustls = "0.14"
rustls = "0.18"
bytes = "0.5"
mio = "0.6"
log = "0.4"
webpki-roots = "0.20"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core", "fs"] }
tokio-util = { version = "0.2", features = ["codec"] }
futures = "0.3"
